# linkml-toolkit

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish_pypi.yml  tests.yml
docs/: contributing.md  index.md
docs/api/: cli.md  core.md  export.md  validation.md
docs/usage/: getting-started.md  summary.md
src/linkml_toolkit/: __init__.py  _version.py  cli.py  core.py  export.py  sql.py  utils.py  validation.py
src/linkml_toolkit/templates/: schema_analysis.html
src/linkml_toolkit/visualization/: __init__.py  components.py  core.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_export.py  test_operations.py  test_validation.py
tests/data/: basic_schema.yaml  invalid_schema.yaml  second_schema.yaml
