[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/linkml_toolkit/_version.py"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100