[metadata]
name = linkml-toolkit
version = attr: linkml_toolkit.__version__
description = A comprehensive toolkit for working with LinkML schemas
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    linkml>=1.3.5
    click>=8.0.0
    rich>=10.0.0
    pyyaml>=5.4.0
    rdflib>=6.0.0
    jsonschema>=4.0.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
    coverage>=5.0
dev =
    %(test)s
    black>=22.0
    isort>=5.0
    mypy>=0.910
docs =
    mkdocs>=1.2
    mkdocstrings>=0.18
    mkdocs-material>=8.0

[options.entry_points]
console_scripts =
    lmtk = linkml_toolkit.cli:main